# rust-lab

./: .gitmodules  Cargo.toml  README.md  deny.toml  install_tools.sh  report.html  rust-toolchain.toml  rustfmt.toml  start_liveness.sh  start_perf.sh  tree.txt
.github/actions/changelog/: action.yml
.github/actions/update-version/: action.yml
.github/actions/version/: action.yml
.github/actions/versioning/: action.yml
.github/workflows/: rust-build.yml  rust-check.yml  worlflow.yml
config/: default.toml  production.toml  staging.toml
liveness/: Cargo.toml
liveness-grpc/: Cargo.toml
liveness-grpc/config/: staging.toml
liveness-grpc/src/: config.rs  crud.rs  echo.rs  main.rs  state.rs
liveness-http/: Cargo.toml
liveness-http/config/: staging.toml
liveness-http/src/: config.rs  main.rs
liveness-perftest/: Cargo.toml
liveness-perftest/src/: main.rs
liveness/config/: default.toml
liveness/src/: config.rs  main.rs
shared/: Cargo.toml  build.rs
shared/proto/crud/: crud.proto
shared/src/: lib.rs  proto.rs  tower_telemetry.rs
shared/src/toolbox/: config.rs  health.rs  logging.rs  mod.rs  profiling.rs  telemetry.rs  traceidformat.rs
shared/src/toolbox/telemetry/: grpc.rs  http.rs  middleware.rs  mod.rs  setup.rs
