[package]
name = "shared"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
envy = "0.4"
env_logger = "0.11"
anyhow = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.11" }
tonic-reflection = "0.11"
prost = { version = "0.12" }
prost-types = { version = "0.12" }

hyper = { version = "1.2", features = ["full"] }
axum = { version = "0.7.3", features = ["macros", "http2", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
futures = "0.3"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["logs", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.21.1", features = [
  "rt-tokio",
  "rt-tokio-current-thread",
  "metrics",
  "trace",
  "logs",
] }
opentelemetry-otlp = { version = "0.14.0", features = [
  "logs",
  "metrics",
  "trace",
  "tonic",
  "opentelemetry-http",
  "http-proto",
  "reqwest",
  "reqwest-client",
] }
opentelemetry-semantic-conventions = "0.13"
opentelemetry-stdout = { version = "0.2", features = [
  "logs",
  "metrics",
  "trace",

] }
tracing-serde = "0.1.3"
opentelemetry-appender-tracing = "0.2.0"


[build-dependencies]
protoc-bin-vendored = "3.0.0"
tonic-build = { version = "0.11.0", features = ["prost"] }
